// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser Grid Block should render OneColumn 1`] = `
<DocumentFragment>
  <div
    class="css-1ek02iu-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-13bgdik-TeaserWrapper e18of27r11"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-6mexrt-TeaserPreTitleWrapper e18of27r3"
          >
            <div
              class="css-161zlv4-PreTitle e18of27r2"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          >
            <time
              class="css-bsjge5-TeaserTime e18of27r0"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023 
            </time>
          </div>
        </div>
      </a>
    </article>
    <article
      class="css-jx9mmb-TeaserWrapper e18of27r11"
      x="0"
      y="1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-6mexrt-TeaserPreTitleWrapper e18of27r3"
          >
            <div
              class="css-161zlv4-PreTitle e18of27r2"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          />
        </div>
      </a>
    </article>
    <article
      class="css-1ml5tfp-TeaserWrapper e18of27r11"
      x="0"
      y="2"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
          />
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Teambesprechung vom 23.05.
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render ThreeColumns 1`] = `
<DocumentFragment>
  <div
    class="css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-8p11sj-TeaserWrapper e18of27r11"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-6mexrt-TeaserPreTitleWrapper e18of27r3"
          >
            <div
              class="css-161zlv4-PreTitle e18of27r2"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          >
            <time
              class="css-bsjge5-TeaserTime e18of27r0"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023 
            </time>
          </div>
        </div>
      </a>
    </article>
    <article
      class="css-z4j0q-TeaserWrapper e18of27r11"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-6mexrt-TeaserPreTitleWrapper e18of27r3"
          >
            <div
              class="css-161zlv4-PreTitle e18of27r2"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          />
        </div>
      </a>
    </article>
    <article
      class="css-wylm69-TeaserWrapper e18of27r11"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
          />
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Teambesprechung vom 23.05.
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-8p11sj-TeaserWrapper e18of27r11"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-6mexrt-TeaserPreTitleWrapper e18of27r3"
          >
            <div
              class="css-161zlv4-PreTitle e18of27r2"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          >
            <time
              class="css-bsjge5-TeaserTime e18of27r0"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023 
            </time>
          </div>
        </div>
      </a>
    </article>
    <article
      class="css-z4j0q-TeaserWrapper e18of27r11"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-6mexrt-TeaserPreTitleWrapper e18of27r3"
          >
            <div
              class="css-161zlv4-PreTitle e18of27r2"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          />
        </div>
      </a>
    </article>
    <article
      class="css-wylm69-TeaserWrapper e18of27r11"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
          />
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Teambesprechung vom 23.05.
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-8p11sj-TeaserWrapper e18of27r11"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-6mexrt-TeaserPreTitleWrapper e18of27r3"
          >
            <div
              class="css-161zlv4-PreTitle e18of27r2"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          >
            <time
              class="css-bsjge5-TeaserTime e18of27r0"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023 
            </time>
          </div>
        </div>
      </a>
    </article>
    <article
      class="css-z4j0q-TeaserWrapper e18of27r11"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-6mexrt-TeaserPreTitleWrapper e18of27r3"
          >
            <div
              class="css-161zlv4-PreTitle e18of27r2"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          />
        </div>
      </a>
    </article>
    <article
      class="css-wylm69-TeaserWrapper e18of27r11"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1f245dr-TeaserContentWrapper e18of27r8"
        >
          <div
            class="css-1xekyz3-TeaserImageWrapper e18of27r9"
          >
            <img
              alt="An image description"
              class="css-1yp4o46-ImageWrapper-Teaser e1shv2yg0"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
          />
          <h1
            class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
          >
            Teambesprechung vom 23.05.
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
          >
            Lead
          </p>
          <div
            class="css-sibxk9-TeaserMetadata e18of27r1"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;
